# cowork-genealogy

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  .npmrc  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  InstallHooks.bat  Makefile  PROJECT-GOAL.md  README.md  Reinstall.bat  TODOS.md  default-model.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-notes.md  tsconfig.base.json  turbo.json
apps/server/: pyproject.toml  run-dev.sh
apps/server/app/: agent_secrets.py  auth.py  chat.py  config.py  db.py  familysearch.py  feedback.py  fs_oauth.py  image_proxy.py  live_session.py  main.py  models.py  obs.py  realtime_routes.py  sandbox_server.py  sessions.py  v1.py  ws.py  ws_token.py
apps/server/sandbox/: README.md  build-image.sh  e2b.Dockerfile  e2b.toml
apps/server/tests/: conftest.py  test_ably_flow.py  test_agent_secrets.py  test_chat.py  test_e2b_provider.py  test_familysearch.py  test_feedback.py  test_real_agent_stream.py  test_real_agent_usage.py  test_realtime.py  test_runner_interrupt.py  test_sandbox_server.py  test_sessions.py  test_uploads.py  test_v1_api.py  test_viewer.py
eval/harness/: .gitignore  .tool-versions  pyproject.toml  run_tests.py  skill_gate.py  skill_latency_report.py
eval/harness/e2e/: __init__.py  author.py  calibrate_judge.py  env.py  judge.py  judge_prompt.md  latency_report.py  orchestrator.py  preflight.py  project.py  report.py  result.py  run_e2e.py  scratch.py  seed_calibration_case.py  stop_checker.py  subagent_capture.py  try_record_extractor_thinking.py  validate_fixture.py  view.py
eval/harness/harness/: allowed_tools.py  auth.py  content_hash.py  context_policy.py  diff.py  fixtures.py  judge.py  leakage.py  loader.py  mock_mcp.py  orchestrator.py  rubric.py  runlog.py  runnability.py  schema_validator.py  skill_runner.py  snapshot.py  tool_catalog.py  validator_runner.py  versioning.py  workspace.py
eval/harness/judge/: prompt.md
eval/harness/scripts/: check_e2e_fixtures.py  check_runlogs.py  check_skill_frontmatter.py  check_tool_coverage.py  gen_ann.py  timing_report.py
eval/harness/validators/: conftest.py  test_assertion_classification.py  test_check_warnings.py  test_citation.py  test_conflict_resolution.py  test_convert_dates.py  test_historical_context.py  test_hypothesis_tracking.py  test_init_project.py  (+20 more)
eval/triggering/: .gitignore  VENDORED.md  build_eval_set.py  pyproject.toml
(+3684 files in other folders)
