[project]
name = "genealogy-workbench-server"
version = "0.0.0"
description = "FastAPI control plane for the hosted genealogy workbench (POC)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
    "authlib>=1.3",
    "claude-agent-sdk>=0.2.93",
    "ably>=3.1.2",
    "e2b>=2.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "anyio>=4.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
